fix : 키 파일 추가 / 사이닝 설정 추가 / 카카오 로그인 관련 기능 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">studyEduProject</string>
+    <string name="app_name">Momento</string>
+
+    <string name="kakao_app_key">2ae02e1201241a46d10b0596bb9044d1</string>
+    <string name="kakao_app_secret_key">27dQATm1zvMrrV1BwDZLGoHGZLRYLY97</string>
+
 </resources>
