--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="kakao_app_key">2ae02e1201241a46d10b0596bb9044d1</string>
     <string name="kakao_app_secret_key">27dQATm1zvMrrV1BwDZLGoHGZLRYLY97</string>
 
+    <string name="facebook_app_id">1642211965880033</string>
+    <string name="fb_login_protocol_scheme">fb1642211965880033</string>
+
 </resources>
